--- a/package.json
+++ b/package.json
@@ -4,8 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "tsc && NODE_ENV=development concurrently -k -p \"[{name}]\" -n \"Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" ",
+    "watch-node": "nodemon dist/server.js",
+    "build": "tsc",
+    "watch-ts": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@godaddy/terminus": "^4.9.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "@types/http-errors": "^1.8.1",
+    "@types/node": "^16.11.11",
+    "@types/pg": "^8.6.1",
+    "concurrently": "^6.4.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
+    "helmet": "^4.6.0",
+    "http-errors": "^1.8.1"
+  }
 }
