--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vamstar",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "tsc && NODE_ENV=development concurrently -k -p \"[{name}]\" -n \"Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\" ",
     "watch-node": "nodemon dist/server.js",
@@ -31,6 +30,10 @@
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "helmet": "^4.6.0",
-    "http-errors": "^1.8.1"
+    "http-errors": "^1.8.1",
+    "knex": "^0.95.7",
+    "objection": "^3.0.0",
+    "pg": "^8.7.1",
+    "ts-node": "^10.4.0"
   }
 }
