--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch-node": "nodemon dist/server.js",
     "build": "tsc",
     "watch-ts": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "rm -rf dist && npx jest -i --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -17,9 +17,12 @@
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/http-errors": "^1.8.1",
+    "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.177",
     "@types/node": "^16.11.11",
     "@types/pg": "^8.6.1",
     "concurrently": "^6.4.0",
+    "jest": "^27.4.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "typescript": "^4.5.2"
@@ -32,8 +35,10 @@
     "helmet": "^4.6.0",
     "http-errors": "^1.8.1",
     "knex": "^0.95.7",
+    "lodash": "^4.17.21",
     "objection": "^3.0.0",
     "pg": "^8.7.1",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0"
   }
 }
