--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@types/supertest": "^2.0.11",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -38,6 +39,7 @@
     "lodash": "^4.17.21",
     "objection": "^3.0.0",
     "pg": "^8.7.1",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0"
   }
