--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "devDependencies": {
     "@godaddy/terminus": "^4.9.0",
+    "@types/bunyan": "^1.8.8",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-bunyan-logger": "^1.3.3",
     "@types/fs-extra": "^9.0.13",
     "@types/http-errors": "^1.8.1",
     "@types/jest": "^27.0.3",
@@ -29,9 +31,11 @@
   },
   "dependencies": {
     "@types/supertest": "^2.0.11",
+    "bunyan": "^1.8.15",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-bunyan-logger": "^1.3.3",
     "fs-extra": "^10.0.0",
     "helmet": "^4.6.0",
     "http-errors": "^1.8.1",
