--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch-node": "nodemon dist/server.js",
     "build": "tsc",
     "watch-ts": "tsc -w",
-    "test": "rm -rf dist && npx jest -i --coverage"
+    "test": "rm -rf dist && npx jest -i --coverage",
+    "migrate": "knex migrate:latest --env production"
   },
   "author": "",
   "license": "ISC",
